crates/reinhardt-pages/tests/ui/component/fail/unknown_route_option.stderr
error: expected route name argument `name = "..."`
 --> tests/ui/component/fail/unknown_route_option.rs:3:45
  |
3 | #[component("/projects/", name = "project", cache = true)]
  |                                             ^^^^^

warning: unused imports: `Page` and `page`
 --> tests/ui/component/fail/unknown_route_option.rs:1:23
  |
1 | use reinhardt_pages::{Page, component, page};
  |                       ^^^^             ^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
